feat: добавлен новый функционал для получения списка книг с высоким рейтингом и продажами, добавлена сортировка "по количеству продаж", сортировка с наличием хотя бы одной фото у автора
