# app/Http/Controllers/Api/BookApiController.php
@@ -36,12 +36,22 @@ class BookApiController extends Controller
      *     tags={"Books"},
      *     summary="Получить список книг в продаже",
      *     description="Возвращает отфильтрованный и отсортированный список книг",
-     *     @OA\Parameter(name="sort_by", in="query", @OA\Schema(type="string")),
+     *     @OA\Parameter(
+ *         name="sort_by",
+ *         in="query",
+ *         description="Поле для сортировки (доступные значения: id, title - название, price - цена, quantity - количество, created_at - дата создания, sells_count - количество продаж)",
+ *         @OA\Schema(
+ *             type="string",
+ *             enum={"id", "title", "price", "quantity", "created_at", "sells_count"},
+ *             default="id"
+ *         )
+ *     ),
      *     @OA\Parameter(name="sort_direction", in="query", @OA\Schema(type="string", enum={"asc", "desc"}, default="asc")),
      *     @OA\Parameter(name="title", in="query", @OA\Schema(type="string")),
      *     @OA\Parameter(name="min_price", in="query", @OA\Schema(type="number", format="float")),
      *     @OA\Parameter(name="max_price", in="query", @OA\Schema(type="number", format="float")),
      *     @OA\Parameter(name="min_quantity", in="query", @OA\Schema(type="integer")),
+     *     @OA\Parameter(name="with_author_avatar", in="query", @OA\Schema(type="boolean", default=false), description="Показать только книги авторов с аватарками"),
      *     @OA\Response(response=200, description="Успешный запрос", @OA\JsonContent(ref="#/components/schemas/BooksListResponse"))
      * )
      */
@@ -54,6 +64,9 @@ class BookApiController extends Controller
             'sort' => [
                 'field' => $request->input('sort_by'),
                 'direction' => $request->input('sort_direction', 'asc'),
+            ],
+            'additional_filters' => [
+                'with_author_avatar' => $request->has('with_author_avatar') ? (bool)$request->input('with_author_avatar') : false,
             ],
             'total_count' => $books->count()
         ];
@@ -136,5 +149,55 @@ class BookApiController extends Controller
                 'sale' => new SellResource($result['sell'])
             ]
         ], 201);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/books/top",
+     *     tags={"Books"},
+     *     summary="Получить список книг авторов с высоким рейтингом или с высокими продажами за сегодня",
+     *     description="Возвращает список книг у авторов которых рейтинг выше 75 либо количество продаж за текущий день больше 3",
+     *     @OA\Parameter(
+     *         name="sort_by",
+     *         in="query",
+     *         description="Поле для сортировки (доступные значения: id, title - название, price - цена, quantity - количество, created_at - дата создания, sells_count - количество продаж)",
+     *         @OA\Schema(
+     *             type="string",
+     *             enum={"id", "title", "price", "quantity", "created_at", "sells_count"},
+     *             default="id"
+     *         )
+     *     ),
+     *     @OA\Parameter(name="sort_direction", in="query", @OA\Schema(type="string", enum={"asc", "desc"}, default="asc")),
+     *     @OA\Parameter(name="title", in="query", @OA\Schema(type="string")),
+     *     @OA\Parameter(name="min_price", in="query", @OA\Schema(type="number", format="float")),
+     *     @OA\Parameter(name="max_price", in="query", @OA\Schema(type="number", format="float")),
+     *     @OA\Parameter(name="min_quantity", in="query", @OA\Schema(type="integer")),
+     *     @OA\Parameter(name="min_author_rank", in="query", @OA\Schema(type="integer", default=75)),
+     *     @OA\Parameter(name="min_today_sales", in="query", @OA\Schema(type="integer", default=3)),
+     *     @OA\Response(response=200, description="Успешный запрос", @OA\JsonContent(ref="#/components/schemas/BooksListResponse"))
+     * )
+     */
+    public function topBooks(Request $request)
+    {
+        $books = $this->bookService->getBooksHighRankOrTopSales($request);
+
+        $meta = [
+            'filters' => $this->bookService->getRequestFilters($request),
+            'sort' => [
+                'field' => $request->input('sort_by'),
+                'direction' => $request->input('sort_direction', 'asc'),
+            ],
+            'additional_filters' => [
+                'min_author_rank' => $request->input('min_author_rank', 75),
+                'min_today_sales' => $request->input('min_today_sales', 3),
+            ],
+            'total_count' => $books->count()
+        ];
+
+        return response()->json([
+            'status' => 'success',
+            'data' => BookResource::collection($books),
+            'meta' => $meta,
+        ]);
     }
 }
